--- a/experience.html
+++ b/experience.html
@@ -79,7 +79,7 @@
         <hr>
         <span class="cvheading">FCC CONSTRUCCIÓN</span><br>
         <p>In charge of production of Working Drawings and also Design Site Representative for the <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a>, 
-        formerly known as Danube Bridge 2 and the Vidin-Calafat Bridge  (Bulgaria). Contract value 235M€.</p>
+        (Vidin-Calafat Bridge, Bulgaria). Contract value 235M€.</p>
             <figure>
                 <img src="photos/vidin.jpg" alt="Mersey Gateway" style="width:90%">
                 <figcaption>New Europe Bridge (Bulgaria)</figcaption>
@@ -97,12 +97,12 @@
                 <img src="photos/repsol.jpg" alt="Mersey Gateway" style="width:40%">
                 <figcaption>Torre Cepsa (Madrid)</figcaption>
             </figure>
-            <p>Responsible for quality control checking of concrete structure and concrete-steel composite slabs: 
-                placing of reinforcing bars, checking of shear studs, concrete sampling and 7 and 28 day cylinder strengths etc.</p>
+            <p>Responsible for on-site quality control checking of reception of materials and execution of reinforced 
+                and prestressed concrete structures and concrete-steel composite slabs.</p>
     <hr>
                 <span class="cvheading">OPROLER MADRID SA</span><br>
         <p>Site Manager on refurbishment of 19,000m2 of office space in two buildings for Ericsson Spain. Contract value €1.7m. 
-            Responsible for supervising the setting out and erection of new Movinord partitions.</p>
+            </p>
             <figure>
                 <img src="photos/mendez.jpg" alt="Mersey Gateway" style="width:40%">
                 <figcaption>Ericsson Mendez Alvaro (Madrid)</figcaption>
@@ -137,28 +137,29 @@
     <hr>
             <span class="cvheading">PONDIO INGENIEROS, MADRID</span><br>
             <p><b>Design Engineer.</b><br>
-                Produced design calculations in reinforced concrete for a various types of projects, see list below:
+                Produced design calculations in reinforced concrete for a various types of projects including:
             </p>
-            <p>Santiago-Ourense Motorway<br>
-                False tunnel Ciudad de la Cultura, Galicia<br>
-        Endesa headquaters, Madrid<br>
-        Tenerife Airport North Terminal<br>
-        Parador Lerma<br>
-        Sporting complex C.A.R.D Sierra Nevada<br>
-        Industrial showrooms, San Sebastián de los Reyes<br>
-        A.V.E train station Zaragoza<br>
-        Repsol Technology Centre, Mostoles<br>
-        Apartment block, San Sebastian de los Reyes<br>
-        Health Centre Benitez, Ceuta<br>
-        Office complex, Las Rozas<br>
-        Industrial warehouse, Villaverde<br>
-        Offices and retail, San Sebastian de los Reyes<br>
-        Multi-storey apartments, Madrid<br>
-        Sporting complex, Salamanca<br>
-        Fire station, Aranda de Duero (Burgos)<br>
-        Multi-storey apartments, Illescas (Toledo)<br>
-        Underground multi-storey carpark, Santiago de Compostela<br>
-        Multi-storey apartments, Cordoba<br></p>
+            <p><b>Santiago-Ourense Motorway.</b> Client:  ICEASA.<br>
+                <b>False tunnel Ciudad de la Cultura, Galicia.</b> Architect: Eisenman Architects.<br>
+                <b>Endesa headquaters.</b> Client: Prointec.<br>
+                <b>Tenerife Airport North Terminal.</b> Client: Ferrodarias UTE.<br>
+                <b>Parador Lerma.</b> Client: Constructora Hispanica.<br>
+                <b>Sporting complex C.A.R.D Sierra Nevada.</b> Architect: D. Benito Barbadillo de la Fuente.<br>
+                <b>Industrial showrooms, San Sebastián de los Reyes.</b> Architect: D. Manuel Izquierdo.<br>
+                <b>A.V.E train station Zaragoza.</b> Client: D. Carlos Ferrater.<br>
+                <b>Repsol Technology Centre, Mostoles.</b> Client: Proes y Typsa.<br>
+                <b>Apartment block, San Sebastian de los Reyes.</b>	Architect: D. Manuel Izquierdo.<br>
+                <b>Health Centre Benitez, Ceuta.</b> Architect: D. Gonzalo Cabanillas.<br>
+                <b>Office complex, Las Rozas.</b> Client: Alatec.<br>
+                <b>Industrial warehouse, Villaverde.</b> Client: FCC.<br>
+                <b>Offices and retail, San Sebastian de los Reyes.</b> Client: Inbisa Madrid SA.<br>
+                <b>Multi-storey apartments, Madrid.</b>	Architect: D. Pablo Aldaz.<br>
+                <b>Sporting complex, Salamanca.</b>	Client: Alatec-Proes.<br>
+                <b>Fire station, Aranda de Duero (Burgos).</b> Architect: D. Gonzalo Cabanillas.<br>
+                <b>Multi-storey apartments, Illescas (Toledo).</b> Architect: D. Gonzalo Cabanillas.<br>
+                <b>Underground multi-storey carpark, Santiago de Compostela.</b> Client: ACS.<br>
+                <b>Multi-storey apartments, Cordoba.</b> Architect: Rafael de la Hoz.
+                </p>
         <figure>
             <img src="photos/endesa.jpg" alt="Mersey Gateway" style="width:40%">
             <figcaption>Endesa Headquarters, Madrid</figcaption>
