--- a/index.html
+++ b/index.html
@@ -87,21 +87,19 @@
                             Structural design of building projects in reinforced concrete, structural steelwork, timber, and masonry.<br>
                             Civil Engineering design of paved areas  and drainage in housing developments.<br>
                             Quantities estimating, structural surveys and appraisals of existing buildings, reports,  method statements, specifications etc.<br>
-                            Technical evaluation of civil engineering claims.<br>
-                            Experience with Australian, British, Spanish, and American Standards and Codes of Practice as well as Eurocodes.<br>
+                            Technical evaluation of civil engineering claims.
                         </p>    
                     </div>
                     <div class="column">
                         <span class="cvheading">Profession</span> 
                         <p>Structural/Civil Engineer</p>
-                        <span class="cvheading">Nationality/Languages</span>
+                        <span class="cvheading">Nationality | Languages</span>
                         <p>
-                            Australian<br>
-                            Spanish - Fluent<br>
+                            Australian | Fluent in Spanish.<br>
                         </p>
                         <span class="cvheading">Qualifications</span>
                         <p>
-                            BE (Civil) University of Melbourne. 1982<br>
+                            BE (Civil) University of Melbourne, 1982.<br>
                         </p>
                         <span class="cvheading">Online Computer Science Courses Harvard University</span>
                     <p>
@@ -111,12 +109,16 @@
                     </p>
                     <span class="cvheading">Professional Associations</span>
                     <p>
-                        Corporate Member Institution of Structural Engineers (MIStructE)<br>
-                        Graduate Member Institution of Civil Engineers (GMICE)<br>
+                        Corporate Member Institution of Structural Engineers (MIStructE).<br>
+                        Graduate Member Institution of Civil Engineers (GMICE).<br>
                     </p>
                 </div>
                 <div class="row" style="padding-left:5px">
-                    <span class="cvheading">Recent Experience</span>
+                    <span class="cvheading">Experience 2006 to present</span>
+                    <span class="link">Evaluation of contract claims</span>
+                    <p>Richard is responsible for assessing and defending claims brought by contractors against Eptisa, 
+                        to assist in the mediation process. A claim relating to the Mersey Gateway Project was successfully 
+                        resolved at mediation and a claim relating to the N25 New Ross Bypass tender is ongoing.</p>
                     <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project</a><br>
                     <p><b>Deputy Project Manager Landside Structures.</b> 
                         Project manager for Eptisa  whose design responsibilities covered all retaining walls, 
@@ -133,8 +135,8 @@
                         </div>
                         <div class="row" style="padding-left:5px">
                             <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
-                            <p><b>Management of production of Working Drawings and also Design Site Representative</b> for the New Europe Bridge, 
-                                formerly known as Danube Bridge 2 and the Vidin–Calafat Bridge  (Bulgaria). Richard was responsible for developing 
+                            <p><b>Management of production of Working Drawings and also Design Site Representative</b> for the New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). 
+                                Richard was responsible for developing 
                                 the design general arrangement drawings for the entire project into working drawings. 
                                 These included the river crossing and approach as well as the railway bridge and the drainage design for both structures. 
                                 He was also the Design Site Representative and attended monthly site design coordination meetings 
