--- a/indice.html
+++ b/indice.html
@@ -76,29 +76,28 @@
                     
                     />
                     <p>Richard cuenta con casi 40 años de experiencia como ingeniero civil y estructural. 
-                        Su experiencia cubre tanto edificación como puentes en los últimos años. 
-                        Ha trabajado en Australia, Inglaterra y España donde vive.</p>
+                        Su experiencia cubre tanto edificación como puentes en los últimos años. Ha trabajado en Australia, 
+                        Inglaterra y España donde reside.</p>
                     </div>
                     <div class="column">
                         <span class="cvheading">Experiencia clave</span>
-                        <p>Una experiencia amplia en diseño, supervisión de obra, chequeos independientes y gestión de proyectos;<br>
-                            Diseño estructural en edificación utilizando hormigón armada, acero, madera y estructuras de fábrica;<br>
-                            Diseño de pavimiento y drenaje en urbanizaciones;<br>
-                            Estimaciones de cuantías, inspecciones y evaluaciones de edificios, informes, declaraciones de método y especificaciones etc.;<br>
-                            Evaluación técnica de reclamaciones;<br>
-                            Experiencia con las normas australianas, inglesas, españolas y los eurocódigos.
+                        <p>Experiencia amplia en diseño, supervisión de obra, chequeos independientes y gestión de proyectos.<br>
+                           Diseño estructural en edificación utilizando hormigón armado, acero, madera y estructuras de fábrica.<br>
+                           Diseño de pavimiento y drenaje en urbanizaciones.<br>
+                           Estimación de cuantías, inspecciones y evaluación de edificios, informes, declaración de método y especificaciones etc.<br>
+                           Evaluación técnica de reclamaciones para establecer responsabilidad, causa, efecto y daños.
                         </p>    
                     </div>
                     <div class="column">
                     <span class="cvheading">Profesión</span> 
-                    <p>Ingeniero civil/estructural</p>
+                    <p>Ingeniero civil/estructural.</p>
                     <span class="cvheading">Nacionalidad</span>
                     <p>
-                        Australiana<br>
+                        Australiana.<br>
                     </p>
                     <span class="cvheading">Formación académica</span>
                     <p>
-                        BE (Civil) University of Melbourne. 1982<br>
+                        BE (Civil) University of Melbourne, 1982.<br>
                     </p>
                     <span class="cvheading">Cursos en línea Universidad de Harvard</span>
                     <p>
@@ -113,20 +112,25 @@
                     </p>
                 </div>
                 <div class="row" style="padding-left:5px">
-                    <span class="cvheading">Experiencia reciente</span>
+                    <span class="cvheading">Experiencia 2006-actual</span>
+                    <span class="link">Evaluación de reclamaciones de contratistas</span>
+                    <p>Richard es el responsable de evaluar y defender los reclamaciones de los contratistas 
+                    contra Eptisa. Una reclamación relacionada con Mersey Gateway Project fue resuelta 
+                    con éxito en la mediación y una reclamación sobre el N25 New Ross Bypass continúa.</p>
+
                     <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a><br>
                     <p><b>Vice Jefe de Proyecto Landside Structures.</b> Jefe de Proyecto para Eptisa cubriendo el 
                         diseño de los muros de contención, drenaje, y geotecnia para el proyecto entero 
                         incluyendo el puente principal, y de la subestructura del viaducto de Astmoor & Bridgewater. 
                         Richard fue el responsable para la supervisión de la producción y sumisión de los planos y 
-                        informes, incluyendo el control de calidad. Asistió en las reuniones semanales del diseño 
-                        y las reuniones mensuales de la junta directiva.</p>
+                        informes, incluyendo el control de calidad. Asistió a las reuniones semanales de diseño 
+                        y a las reuniones mensuales de la Junta Directiva.</p>
                     </div>
                     <div class="row" style="padding-left:5px">
                         <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
-                        <p><b>Jefe de Proyecto cheque CAT III.</b> Richard fue el responsable para la supervisión 
+                        <p><b>Jefe de Proyecto cheque CAT III.</b> Richard fue el responsable de la supervisión 
                             del chequeo independiente categoría 3 incluyendo asistencia en las reuniones de 
-                            coordinación del Cliente. </p>
+                            coordinación del cliente. </p>
                         </div>
                         <div class="row" style="padding-left:5px">
                             <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
