--- a/empleo.html
+++ b/empleo.html
@@ -94,7 +94,7 @@
       </tr>
       <tr>
         <td>sep 02- feb 04</td>
-        <td><b>Ross & Partners, Londres /Fitzpatrick Contractors, Londres</b>
+        <td><b>Ross & Partners, Londres /Fitzpatrick Contractors, Londres.</b>
           Ross & Partners, Londres /Fitzpatrick Contractors, Londres 
           Ingeniero Residente-Supervisor de obra.  Representante cliente 
           Gibraltar General Hospital, Gibraltar, valor de contrato £30m.
@@ -102,67 +102,67 @@
       </tr>
       <tr>
         <td>feb 00- jul 02</td>
-        <td><b>Pondio Ingenieros, Madrid</b> Proyectista.
+        <td><b>Pondio Ingenieros, Madrid.</b> Proyectista.
         </td>
       </tr>
       <tr>
         <td>sep 97- ago 99</td>
-        <td><b>Ross & Partners, Londres</b> Proyectista.
+        <td><b>Ross & Partners, Londres.</b> Proyectista.
         </td>
       </tr>
       <tr>
         <td>may 91- sep 97</td>
-        <td><b>John E. Foster & Partners, Londres</b> Proyectista/Ingeniero de obra.
+        <td><b>John E. Foster & Partners, Londres.</b> Proyectista/Ingeniero de obra.
         </td>
       </tr>
       <tr>
         <td>ago 90- feb 91</td>
-        <td><b>Ross & Partners, Londres</b> Proyectista.
+        <td><b>Ross & Partners, Londres.</b> Proyectista.
         </td>
       </tr>
       <tr>
         <td>mar 90- ago 90</td>
-        <td><b>Delta Demolitions, Melbourne</b> Jefe de obra.
+        <td><b>Delta Demolitions, Melbourne.</b> Jefe de obra.
         </td>
       </tr>
       <tr>
         <td>dic 88- mar 90</td>
-        <td><b>P & S Kubale Ltd, Melbourne</b> Jefe de obra.
+        <td><b>P & S Kubale Ltd, Melbourne.</b> Jefe de obra.
         </td>
       </tr>
       <tr>
         <td>ene 88- dic 88</td>
-        <td><b>Zafiris Constructions, Melbourne</b> Estimador de costes.
+        <td><b>Zafiris Constructions, Melbourne.</b> Estimador de costes.
         </td>
       </tr>
       <tr>
         <td>may 87- dic 87</td>
-        <td><b>Ross & Partners, Londres</b> Proyectista.
+        <td><b>Ross & Partners, Londres.</b> Proyectista.
         </td>
       </tr>
       <tr>
         <td>jun 86- mar 87</td>
-        <td><b>Reviresco Contracting, Londres</b> Encargado de obra.
+        <td><b>Reviresco Contracting, Londres.</b> Encargado de obra.
         </td>
       </tr>
       <tr>
         <td>dic 85- may 86</td>
-        <td><b>P & S Kubale Ltd, Melbourne</b> Encargado de obra.
+        <td><b>P & S Kubale Ltd, Melbourne.</b> Encargado de obra.
         </td>
       </tr>
       <tr>
         <td>may 85- nov 85</td>
-        <td><b>Ross & Partners, Londres</b> Proyectista.
+        <td><b>Ross & Partners, Londres.</b> Proyectista.
         </td>
       </tr>
       <tr>
         <td>sep 83- nov 84</td>
-        <td><b>P. Berger & Associates, Melbourne</b> Proyectista.
+        <td><b>P. Berger & Associates, Melbourne.</b> Proyectista.
         </td>
       </tr>
       <tr>
         <td>ene 83-ago 83</td>
-        <td><b>Tech Builders, Melbourne</b> Encargado de obra.
+        <td><b>Tech Builders, Melbourne.</b> Encargado de obra.
         </td>
       </tr>
       
