--- a/employment.html
+++ b/employment.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="academic.html">Academic</a>
           </li>
           <li class="nav-item">
-            <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contact</a>
+            <a style="color:tomato" class="nav-link" aria-current="page" href="email.html">Contact</a>
           </li>
         </ul>
       </div>
