--- a/experiencia.html
+++ b/experiencia.html
@@ -82,8 +82,8 @@
             </figure>
         <span class="cvheading">FCC CONSTRUCCIÓN</span><br>
         <p>Encargado de la producción de todos los planos de construcción y representante del 
-            diseño en los reuniones mensuales de obra para el <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a>, 
-            previamente conocido como el Danube Bridge 2 y el Vidin-Calafat Bridge (Bulgaria). Valor de contrato 235M€.</p>
+            diseño en los reuniones mensuales de obra para el <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a> 
+            (Vidin-Calafat Bridge, Bulgaria). Valor de contrato 235M€.</p>
             <figure>
                 <img src="photos/vidin.jpg" alt="Mersey Gateway" style="width:90%">
                 <figcaption>New Europe Bridge (Bulgaria)</figcaption>
@@ -135,26 +135,27 @@
             <p><b>Proyectista.</b><br>
                 Responsable para la produccion de planos y calculos:
             </p>
-            <p>Autopista Santiago-Orense;<br>
-                Falso túnel Ciudad de la Cultura, Galicia;<br>
-                Sede de Endesa, Madrid;<br>
-                Terminal Norte Aeropuerto, Tenerife;<br>
-                Parador Lerma, Burgos;<br>
-                Complejo Deportivo C.A.R.D, Sierra Nevada;<br>
-                Nave para exposiciones industriales, San Sebastián de los Reyes, Madrid;<br>
-                Estación A.V.E, Zaragoza;<br>
-                Centro Tecnológico Repsol, Móstoles, Madrid;<br>
-                Bloque de Apartamentos, San Sebastián de los Reyes, Madrid;<br>
-                Centro de Salud Benítez, Ceuta;<br>
-                Complejo de Oficinas, Las Rozas;<br>
-                Nave Industrial Villaverde, Madrid;<br>
-                Oficinas y locales comerciales, San Sebastián de los Reyes, Madrid;<br>
-                Bloque de viviendas, Madrid;<br>
-                Complejo Deportivo, Salamanca;<br>
-                Estación de Bomberos, Aranda de Duero,Burgos;<br>
-                Edificio de apartamentos, Illescas, Toledo;<br>
-                Aparcamiento subterráneo varias alturas, Santiago de Compostela;<br>
-                Bloque de viviendas, Córdoba.<br>             
+            <p><b>Autopista Santiago-Orense</b>	Cliente:  ICEASA.<br>
+                <b>Falso túnel Ciudad de la Cultura, Galicia.</b> Arquitecto: Eisenman Arquitectos.<br>
+                <b>Sede de Endesa, Madrid.</b>	Cliente: Prointec.<br>
+                <b>Terminal Norte Aeropuerto, Tenerife.</b>	Cliente: Ferrodarias UTE.<br>
+                <b>Parador Lerma, Burgos.</b> Cliente: Constructora Hispanica.<br>
+                <b>Complejo Deportivo C.A.R.D, Sierra Nevada.</b> Arquitecto: D. Benito Barbadillo de la Fuente.<br>
+                <b>Nave para exposiciones industriales, San Sebastián de los Reyes, Madrid.</b>	Arquitecto: D. Manuel Izquierdo.<br>
+                <b>Estación A.V.E, Zaragoza.</b> Cliente: D. Carlos Ferrater.<br>
+                <b>Centro Tecnológico Repsol, Móstoles, Madrid.</b>	Cliente: Proes y Typsa.<br>
+                <b>Bloque de Apartamentos, San Sebastián de los Reyes, Madrid.</b> Arquitecto: D. Manuel Izquierdo.<br>
+                <b>Centro de Salud Benítez, Ceuta.</b> Arquitecto: D. Gonzalo Cabanillas.<br>
+                <b>Complejo de Oficinas, Las Rozas.</b>	Cliente: Alatec.<br>
+                <b>Nave Industrial Villaverde, Madrid.</b> Cliente: FCC
+                <b>Oficinas y locales comerciales, San Sebastián de los Reyes, Madrid.</b>	Cliente: Inbisa Madrid SA.<br>
+                <b>Bloque de viviendas, Madrid.</b>	Arquitecto: D. Pablo Aldaz.<br>
+                <b>Complejo Deportivo, Salamanca.</b> Cliente: Alatec-Proes.<br>
+                <b>Estación de Bomberos, Aranda de Duero,Burgos.</b> Arquitecto: D. Gonzalo Cabanillas.<br>
+                <b>Edificio de apartamentos, Illescas, Toledo.</b> Arquitecto: D. Gonzalo Cabanillas.<br>
+                <b>Aparcamiento subterráneo varias alturas, Santiago de Compostela.</b>	Cliente: ACS.<br>
+                <b>Bloque de viviendas, Córdoba.</b> Arquitecto: Rafael de la Hoz.
+                             
                 </p>
         <figure>
             <img src="photos/endesa.jpg" alt="Mersey Gateway" style="width:40%">
