--- a/indice.html
+++ b/indice.html
@@ -80,7 +80,7 @@
                         Inglaterra y España donde reside.</p>
                     </div>
                     <div class="column">
-                        <span class="cvheading">Experiencia clave</span>
+                        <span class="cvheading">Experiencia general</span>
                         <p>Experiencia amplia en diseño, supervisión de obra, chequeos independientes y gestión de proyectos.<br>
                            Diseño estructural en edificación utilizando hormigón armado, acero, madera y estructuras de fábrica.<br>
                            Diseño de pavimiento y drenaje en urbanizaciones.<br>
