--- a/academica.html
+++ b/academica.html
@@ -60,8 +60,9 @@
           <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
         </a>
         </nav>
+        <span style="margin-left: 2vh;" class="cvheading">Grado y certificados</span>
+          <hr>
     <main style="padding-top:1vh; text-align:center;">
-      <h3 class="noScreen">Grado y certificados</h3>
       <div class="container p-2">
           <div class="column">
               <figure>
