--- a/email_esp.html
+++ b/email_esp.html
@@ -54,8 +54,8 @@
 <div class="fcf-body">
 
     <div id="fcf-form">
-    <h6>Contactar con Richard Hart</h6>
-
+    <h6>Contactar con Richard Hart:</h6>
+    <hr><br>
     <form id="fcf-form-id" class="fcf-form-class" method="post" action="https://formspree.io/f/xzbokvaw">
         
         <div class="fcf-form-group">
