--- a/experience.html
+++ b/experience.html
@@ -61,6 +61,8 @@
     <main style="padding-top:1vh">
         <h3 class="noScreen">CV Richard Hart</h3>
         <div class="container p-3">
+        <span class="cvheading">Experience</span>
+        <hr>
         <span class="cvheading">EPTISA</span><br>
             <p><a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a> Deputy Project Manager Landside Structures.<br>
             <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass:</a> Project Manage CAT III check.</p>
@@ -139,7 +141,7 @@
             <p><b>Design Engineer.</b><br>
                 Produced design calculations in reinforced concrete for a various types of projects including:
             </p>
-            <p><b>Santiago-Ourense Motorway.</b> Client:  ICEASA.<br>
+            <p><b>Santiago-Ourense Motorway.</b> Client: ICEASA.<br>
                 <b>False tunnel Ciudad de la Cultura, Galicia.</b> Architect: Eisenman Architects.<br>
                 <b>Endesa headquaters.</b> Client: Prointec.<br>
                 <b>Tenerife Airport North Terminal.</b> Client: Ferrodarias UTE.<br>
