--- a/experiencia.html
+++ b/experiencia.html
@@ -62,9 +62,9 @@
             
     </nav>
     <main style="padding-top:1vh;">
-        <h3 class="noScreen">CV Richard Hart</h3>
         <div class="container p-2">
-            
+            <span class="cvheading">Experiencia</span>
+        <hr>
         <span class="cvheading">EPTISA</span><br>
         <p><a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a> Vice Jefe de Proyecto <i>Landside Structures.</i><br>
             <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass:</a> Jefe de Proyecto chequeo CAT III.</p>
