--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="row" style="padding-left:5px">
                     <span class="cvheading">Experience 2006 to present</span>
                     <span class="link">Evaluation of contract claims</span>
-                    <p>Richard is responsible for assessing and defending claims brought by contractors against Eptisa, 
+                    <p>Richard is responsible for assessing and defending various claims brought by contractors against Eptisa, 
                         to assist in the mediation process. A claim relating to the Mersey Gateway Project was successfully 
                         resolved at mediation and a claim relating to the N25 New Ross Bypass tender is ongoing.</p>
                     <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project</a><br>
