--- a/indice.html
+++ b/indice.html
@@ -114,7 +114,7 @@
                 <div class="row" style="padding-left:5px">
                     <span class="cvheading">Experiencia 2006-actual</span>
                     <span class="link">Evaluación de reclamaciones de contratistas</span>
-                    <p>Richard es el responsable de evaluar y defender los reclamaciones de los contratistas 
+                    <p>Richard es el responsable de evaluar y defender varias reclamaciones de los contratistas 
                     contra Eptisa. Una reclamación relacionada con Mersey Gateway Project fue resuelta 
                     con éxito en la mediación y una reclamación sobre el N25 New Ross Bypass continúa.</p>
 
