--- a/academic.html
+++ b/academic.html
@@ -57,8 +57,9 @@
                 width="25px"/>
             </a>
         </nav>
+        <span style="margin-left: 2vh;" class="cvheading">Degree and Certificates</span>
+        <hr>
     <main style="padding-top:1vh; text-align:center;">
-        <h3 class="noScreen">Degree and Certificates</h3>
         <div class="container p-2">
             <div class="column">
                 <figure>
