--- a/email.html
+++ b/email.html
@@ -57,7 +57,7 @@
 <div class="fcf-body">
 
     <div id="fcf-form">
-    <h6>Contact Richard Hart</h6>
+    <h6>Contact Richard Hart:</h6>
     <hr><br>
     <form id="fcf-form-id" class="fcf-form-class" method="post" action="https://formspree.io/f/xzbokvaw">
         
