--- a/index.html
+++ b/index.html
@@ -66,47 +66,49 @@
         </a>
 </nav>
 <main style="padding-top:1vh; background-color:#f6f6f6; text-align: justify;">
-    <div class="container p-2">
-        <div class="row" style="padding-left:5px">
-            <span class="cvbigheading">Introduction</span>
-            <p>Australian freelance civil/structural engineer with extensive experience based in Spain with 
-                availability for either short or long-term assignments.  With particular interest in:<br>
+    <div class="container p-3">
+        <div class="row" style="padding-left:5px; margin-bottom: 0%;">
+            <span class="cvheading">Introduction</span>
+            <p style="margin-bottom: 0%;">Australian freelance civil/structural engineer with extensive experience.
+                 Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
                 > Management of tender and detailed design document preparation; drawings, specifications etc.;<br>
                 > Representation of consultant at design/site/project management meetings;<br>
-                > Assessment and evaluation of claims.<br>
+                > Assessment and evaluation of claims.
                 </p>
-            <span class="cvbigheading">Résumé</span>
-        </div>
+            </div>
+            <!-- <span class="cvbigheading">Résumé</span> -->
     </div>
-    <div class="container p-2">
+    <hr>
+    <div class="container p-3">
         <div class="column">
-            <span class="cvheading">Profile</span><br>
-            <img
-                title = "Richard Hart"      
-                src="photos/rh_foto_trim.jpg"
-                width="150px"
-                alt="RH"
-                class="img-thumbnail"
-                float= "left";
-                margin= "5px";
-                />
-            <p>Richard has nearly 40 years of construction industry experience in the 
+            <span class="cvheading" style="margin-top:0%">Profile</span><br>
+            <div style="float:left; margin: 5px 5px 5px ">
+                <img
+                    title = "Richard Hart"      
+                    src="photos/rh_foto_trim.jpg"
+                    width="110px"
+                    alt="RH"
+                    class="img-thumbnail"
+                    margin= "5px";
+                    />
+            </div>
+            <p style="margin-left: 5px;">Richard has nearly 40 years of construction industry experience in the 
                 fields of civil and structural engineering. His experience covers both building 
                 structures and more recently, bridge projects.
                 He has worked in Australia, England and Spain where he now resides.</p>
-        </div>
-        <div class="column">
             <span class="cvheading">Profession</span> 
             <p>Structural/Civil Engineer</p>
             <span class="cvheading">Qualifications</span>
             <p>BE (Civil) University of Melbourne, 1982.</p>
+        </div>
+        <div class="column">
             <span class="cvheading">Experience</span>
             <p>
-                Broad range of experience in design, site supervision, independent checking and project management.<br>
-                Structural design of building projects in reinforced concrete, structural steelwork, timber, and masonry.<br>
-                Civil Engineering design of paved areas  and drainage in housing developments.<br>
-                Quantities estimating, structural surveys and appraisals of existing buildings, reports,  method statements, specifications etc.<br>
-                Technical evaluation of civil engineering claims.
+                > Broad range of experience in design, site supervision, independent checking and project management.<br>
+                > Structural design of building projects in reinforced concrete, structural steelwork, timber, and masonry.<br>
+                > Civil Engineering design of paved areas  and drainage in housing developments.<br>
+                > Quantities estimating, structural surveys and appraisals of existing buildings, reports,  method statements, specifications etc.<br>
+                > Technical evaluation of civil engineering claims.
             </p>    
         </div>
         <div class="column">
@@ -116,9 +118,9 @@
             <p>Fluent in Spanish.</p>
             <span class="cvheading">Online Computer Science Courses Harvard University</span>
             <p>
-                CS50 Web <i>Web Programming with Python and JavaScript;</i><br>
-                CS50 AI <i>Introduction to Artificial Intelligence with Python;</i><br>
-                CS50x <i>Introduction to Computer Science.</i><br>
+                CS50 Web: <i>Web Programming with Python and JavaScript;</i><br>
+                CS50 AI: <i>Introduction to Artificial Intelligence with Python;</i><br>
+                CS50x: <i>Introduction to Computer Science.</i><br>
             </p>
             <span class="cvheading">Professional Associations</span>
             <p>
@@ -127,7 +129,7 @@
             </p>
         </div>
     </div>
-    <div class="container p-2" >
+    <div class="container p-3" >
         <div class="row" style="padding-left:5px">
             <span class="cvheading">Experience 2006 to present</span>
             <span class="link">Evaluation of contract claims</span>
