--- a/experiencia.html
+++ b/experiencia.html
@@ -18,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
     <title>Experiencia</title>
     <style> 
         @media print { 
@@ -61,8 +62,8 @@
           </a>
             
     </nav>
-    <main style="padding-top:1vh;">
-        <div class="container p-2">
+    <main style="padding-top:1vh; text-align: justify" >
+        <div class="w3-container">
             <span class="cvheading">Experiencia</span>
         <hr>
         <span class="cvheading">EPTISA</span><br>
@@ -81,7 +82,7 @@
             <figcaption>N25 New Ross Bypass: Barrow Crossing (Ireland)</figcaption>
             </figure>
         <span class="cvheading">FCC CONSTRUCCIÓN</span><br>
-        <p>Encargado de la producción de todos los planos de construcción y representante del 
+        <p style="text-align: justify">Encargado de la producción de todos los planos de construcción y representante del 
             diseño en los reuniones mensuales de obra para el <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a> 
             (Vidin-Calafat Bridge, Bulgaria). Valor de contrato 235M€.</p>
             <figure>
@@ -113,7 +114,7 @@
                 <img src="photos/gib.jpg" alt="Mersey Gateway" style="width:40%">
                 <figcaption>Gibraltar General Hospital</figcaption>
             </figure>
-            <p>Modificación de la estructura de hormigón armado en un edificio existente para convertirlo de oficina a un hospital. 
+            <p style="text-align: justify">Modificación de la estructura de hormigón armado en un edificio existente para convertirlo de oficina a un hospital. 
                 Adición de cubierta nueva en acero estructural y puentes peatonales entre las alas del edificio. </p>       
                 <p><b>Proyectista.</b></p>
                 <p>Proyectista para diversas obras/proyectos en hormigon armado, hormigon prefabricado, acero estructural, 
